fix alignment issue

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -176,6 +176,7 @@
 
         .icon {
             width: 72px;
+            height: 72px;
         }
 
         h3 {
